--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-theme">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="assets/branding/gs-war-wagon-logo.svg" alt="GS War Wagon Logo" class="logo"></a>
+      <a class="navbar-brand" href="index.html"><img src="assets/branding/GS War Wagon Centre.png" alt="GS War Wagon Logo" class="logo"></a>
       <div class="collapse navbar-collapse" id="navbarNav"><ul class="navbar-nav ms-auto"><li class="nav-item"><a class="nav-link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link" href="services.html">Services</a></li><li class="nav-item"><a class="nav-link" href="about.html">About</a></li><li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li><li class="nav-item"><a class="nav-link active" href="blog.html">Blog</a></li></ul></div>
     </div>
   </nav>
