--- a/index.html
+++ b/index.html
@@ -3,64 +3,173 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="GS War Wagon Garbage & Refuse LTD — Servicing the Sea to Sky for 30 years.">
+    <meta name="description" content="GS War Wagon Garbage & Refuse LTD — Professional waste management and labor services for Sea to Sky.">
     <link rel="icon" href="assets/branding/gs-favicon.png" type="image/png">
-    <title>GS War Wagon | Garbage & Refuse Services — Sea to Sky</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>GS War Wagon | Professional Garbage & Refuse Services</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <a class="skip-link" href="#main">Skip to main content</a>
-    <nav class="navbar navbar-expand-lg navbar-light bg-theme sticky-top" role="navigation" aria-label="Main Navigation">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <img src="assets/branding/gs-war-wagon-logo.svg" alt="GS War Wagon Logo" class="logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+    
+    <!-- Navigation -->
+    <nav class="navbar" role="navigation" aria-label="Main Navigation">
+        <div class="nav-container">
+            <div class="nav-brand">
+                <a href="index.html">
+                    <img src="assets/branding/GS War Wagon Centre.png" alt="GS War Wagon Logo" class="logo">
+                </a>
+            </div>
+            <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
+                <span></span>
+                <span></span>
+                <span></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <div class="navbar-text mx-auto d-none d-lg-block">
-                    <a href="tel:+16043884636" class="text-decoration-none me-3"><strong>Call now:</strong> (604) 388-4636</a> | 
-                    <a href="mailto:info@gswarwagon.example" class="text-decoration-none ms-3"><strong>Email:</strong> info@gswarwagon.example</a>
-                </div>
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+            <div class="nav-menu" id="navMenu">
+                <ul class="nav-links">
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                 </ul>
+                <div class="nav-contact">
+                    <a href="tel:+16043884636" class="contact-link phone">
+                        <span class="label">Call:</span> (604) 388-4636
+                    </a>
+                    <a href="mailto:info@gswarwagon.example" class="contact-link email">
+                        <span class="label">Email:</span> info@gswarwagon.example
+                    </a>
+                </div>
             </div>
         </div>
     </nav>
 
-    <header class="hero hero-bottom" style="background-image: url('assets/images/hero-placeholder.jpg')" aria-label="GS War Wagon hero">
-        <div class="hero-inner">
-            <h1>GS War Wagon Garbage & Refuse LTD</h1>
-            <p>Servicing the Sea to Sky for 30 years, we provide a wide range of services. Including but not limited to, garbage removal, labour hire, snow management, demolition and removals.</p>
+    <!-- Hero Section -->
+    <header class="hero">
+        <div class="hero-content">
+            <div class="hero-text">
+                <h1>Professional Waste Management & Labor Solutions</h1>
+                <p>Trusted by the Sea to Sky community for 30 years. Reliable, insured, and equipped for any job.</p>
+                <div class="hero-cta">
+                    <a href="contact.html" class="btn btn-primary">Get a Quote</a>
+                    <a href="services.html" class="btn btn-secondary">Our Services</a>
+                </div>
+            </div>
+            <div class="hero-accent"></div>
         </div>
     </header>
 
+    <!-- Main Content -->
     <main id="main" tabindex="-1">
-        <section class="container my-5 process-section">
-            <h2 class="text-center mb-4">What We Do</h2>
-            <p class="text-center">We offer reliable, insured crews, modern equipment, and steady service across residential, commercial and construction sites in the Sea to Sky corridor.</p>
-            <div class="row mt-4">
-                <div class="col-md-4 mb-3"><div class="card p-3"> <h5>Garbage Removal</h5><p>Fast, compliant disposal & bin service.</p></div></div>
-                <div class="col-md-4 mb-3"><div class="card p-3"> <h5>Labour Hire</h5><p>Skilled crews for one-off and ongoing work.</p></div></div>
-                <div class="col-md-4 mb-3"><div class="card p-3"> <h5>Snow Management</h5><p>Seasonal clearing and de-icing.</p></div></div>
+        
+        <!-- Services Overview -->
+        <section class="services-overview">
+            <div class="container">
+                <div class="section-header">
+                    <h2>What We Offer</h2>
+                    <p>From garbage removal to specialized labor solutions, we deliver professional service every time.</p>
+                </div>
+                <div class="services-grid">
+                    <div class="service-card">
+                        <div class="service-icon">🗑️</div>
+                        <h3>Garbage Removal</h3>
+                        <p>Fast, compliant waste disposal and bin service for residential and commercial properties.</p>
+                        <a href="services.html" class="service-link">Learn more →</a>
+                    </div>
+                    <div class="service-card">
+                        <div class="service-icon">👷</div>
+                        <h3>Labour Hire</h3>
+                        <p>Skilled, insured crews for one-off projects and ongoing maintenance work.</p>
+                        <a href="services.html" class="service-link">Learn more →</a>
+                    </div>
+                    <div class="service-card">
+                        <div class="service-icon">❄️</div>
+                        <h3>Snow Management</h3>
+                        <p>Seasonal snow clearing and de-icing services to keep properties safe year-round.</p>
+                        <a href="services.html" class="service-link">Learn more →</a>
+                    </div>
+                    <div class="service-card">
+                        <div class="service-icon">🏗️</div>
+                        <h3>Demolition</h3>
+                        <p>Professional demolition and removal services with full environmental compliance.</p>
+                        <a href="services.html" class="service-link">Learn more →</a>
+                    </div>
+                </div>
             </div>
-            <p class="text-center mt-4"><a href="contact.html" class="btn btn-primary">Request a Quote</a></p>
         </section>
+
+        <!-- Why Choose Us -->
+        <section class="why-choose">
+            <div class="container">
+                <h2>Why Choose GS War Wagon</h2>
+                <div class="features-grid">
+                    <div class="feature">
+                        <div class="feature-number">30+</div>
+                        <h4>Years Experience</h4>
+                        <p>Three decades of reliable service to the Sea to Sky community.</p>
+                    </div>
+                    <div class="feature">
+                        <div class="feature-number">✓</div>
+                        <h4>Fully Insured</h4>
+                        <p>Complete coverage and professional liability protection.</p>
+                    </div>
+                    <div class="feature">
+                        <div class="feature-number">24/7</div>
+                        <h4>Available</h4>
+                        <p>Emergency service when you need it most.</p>
+                    </div>
+                    <div class="feature">
+                        <div class="feature-number">100%</div>
+                        <h4>Professional</h4>
+                        <p>Vetted crews and modern equipment every time.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- CTA Section -->
+        <section class="cta-section">
+            <div class="container">
+                <h2>Ready to Get Started?</h2>
+                <p>Contact us today for a free quote and discover why we're the trusted choice for waste management and labor services.</p>
+                <a href="contact.html" class="btn btn-primary btn-large">Request a Quote</a>
+            </div>
+        </section>
+
     </main>
 
-    <footer class="bg-white text-center py-3" role="contentinfo">
-        <p>&copy; <span id="year"></span> GS War Wagon Garbage & Refuse LTD. All rights reserved.</p>
+    <!-- Footer -->
+    <footer class="footer" role="contentinfo">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h4>GS War Wagon</h4>
+                    <p>Professional waste management and labor solutions for the Sea to Sky.</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Contact</h4>
+                    <p>
+                        <a href="tel:+16043884636">(604) 388-4636</a><br>
+                        <a href="mailto:info@gswarwagon.example">info@gswarwagon.example</a>
+                    </p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; <span id="year"></span> GS War Wagon Garbage & Refuse LTD. All rights reserved.</p>
+            </div>
+        </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/scripts.js"></script>
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
