--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                 <a href="index.html">
                     <img src="assets/branding/GS War Wagon Centre.png" alt="GS War Wagon Logo" class="logo">
                 </a>
+                <div class="nav-contact-mobile">
+                    <a href="tel:+16043884636" class="contact-link phone">
+                        <span class="label">Call:</span> (604) 388-4636
+                    </a>
+                </div>
             </div>
             <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
                 <span></span>
@@ -56,7 +61,11 @@
                     <a href="services.html" class="btn btn-secondary">Our Services</a>
                 </div>
             </div>
-            <div class="hero-accent"></div>
+            <div class="hero-logo-container">
+                <div class="logo-circle">
+                    <img src="assets/branding/GS War Wagon Centre.png" alt="GS War Wagon Logo" class="hero-logo">
+                </div>
+            </div>
         </div>
     </header>
 
@@ -93,6 +102,18 @@
                         <div class="service-icon">🏗️</div>
                         <h3>Demolition</h3>
                         <p>Professional demolition and removal services with full environmental compliance.</p>
+                        <a href="services.html" class="service-link">Learn more →</a>
+                    </div>
+                    <div class="service-card">
+                        <div class="service-icon">💦</div>
+                        <h3>Power Washing</h3>
+                        <p>Professional pressure washing for residential and commercial properties.</p>
+                        <a href="services.html" class="service-link">Learn more →</a>
+                    </div>
+                    <div class="service-card">
+                        <div class="service-icon">🌱</div>
+                        <h3>Yard Cleanup</h3>
+                        <p>Complete yard maintenance and cleanup services to keep your property pristine.</p>
                         <a href="services.html" class="service-link">Learn more →</a>
                     </div>
                 </div>
