Update nav layout: long logo in menu, no-bg logo in hero circle, contact info repositioned

--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
     <!-- Navigation -->
     <nav class="navbar" role="navigation" aria-label="Main Navigation">
         <div class="nav-container">
-            <div class="nav-brand">
-                <a href="index.html">
-                    <img src="assets/branding/GS War Wagon Centre.png" alt="GS War Wagon Logo" class="logo">
-                </a>
-                <div class="nav-contact-mobile">
+            <div class="nav-left">
+                <div class="nav-brand">
+                    <a href="index.html">
+                        <img src="assets/branding/GS War Wagon Centre long.png" alt="GS War Wagon Logo" class="logo">
+                    </a>
+                </div>
+                <div class="nav-contact-desktop">
                     <a href="tel:+16043884636" class="contact-link phone">
                         <span class="label">Call:</span> (604) 388-4636
+                    </a>
+                    <a href="mailto:info@gswarwagon.example" class="contact-link email">
+                        <span class="label">Email:</span> info@gswarwagon.example
                     </a>
                 </div>
             </div>
@@ -38,7 +43,7 @@
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="blog.html">Blog</a></li>
                 </ul>
-                <div class="nav-contact">
+                <div class="nav-contact-mobile">
                     <a href="tel:+16043884636" class="contact-link phone">
                         <span class="label">Call:</span> (604) 388-4636
                     </a>
@@ -63,7 +68,7 @@
             </div>
             <div class="hero-logo-container">
                 <div class="logo-circle">
-                    <img src="assets/branding/GS War Wagon Centre.png" alt="GS War Wagon Logo" class="hero-logo">
+                    <img src="assets/branding/GS War Wagon Centre no bg.png" alt="GS War Wagon Logo" class="hero-logo">
                 </div>
             </div>
         </div>
