--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-theme" role="navigation">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/branding/GS War Wagon Centre.png" alt="GS War Wagon Logo" class="logo">
+                <img src="assets/branding/GS War Wagon Centre long.png" alt="GS War Wagon Logo" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
