--- a/contact.html
+++ b/contact.html
@@ -5,83 +5,167 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contact GS War Wagon for garbage removal, labour hire, snow management and demolition services.">
     <title>Contact | GS War Wagon</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <a class="skip-link" href="#main">Skip to main content</a>
-    <nav class="navbar navbar-expand-lg navbar-light bg-theme" role="navigation">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <img src="assets/branding/GS War Wagon Centre long.png" alt="GS War Wagon Logo" class="logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+    
+    <!-- Navigation -->
+    <nav class="navbar" role="navigation" aria-label="Main Navigation">
+        <div class="nav-container">
+            <div class="nav-left">
+                <div class="nav-brand">
+                    <a href="index.html">
+                        <img src="assets/branding/GS War Wagon Centre long.png" alt="GS War Wagon Logo" class="logo">
+                    </a>
+                </div>
+                <div class="nav-contact-desktop">
+                    <a href="tel:+16043884636" class="contact-link phone">
+                        <span class="label">Call:</span> (604) 388-4636
+                    </a>
+                    <a href="mailto:info@gswarwagon.example" class="contact-link email">
+                        <span class="label">Email:</span> info@gswarwagon.example
+                    </a>
+                </div>
+            </div>
+            <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
+                <span></span>
+                <span></span>
+                <span></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+            <div class="nav-menu" id="navMenu">
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html" class="active">Contact</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                 </ul>
+                <div class="nav-contact-mobile">
+                    <a href="tel:+16043884636" class="contact-link phone">
+                        <span class="label">Call:</span> (604) 388-4636
+                    </a>
+                    <a href="mailto:info@gswarwagon.example" class="contact-link email">
+                        <span class="label">Email:</span> info@gswarwagon.example
+                    </a>
+                </div>
             </div>
         </div>
     </nav>
 
-    <header class="hero" style="background-image: url('assets/images/hero-placeholder.jpg')">
-        <div class="hero-inner">
+    <!-- Page Header -->
+    <header class="page-header">
+        <div class="container">
             <h1>Contact Us</h1>
-            <p>Reach GS War Wagon for quotes, bookings and enquiries.</p>
+            <p>Get in touch with GS War Wagon for quotes, bookings, and inquiries</p>
         </div>
     </header>
 
+    <!-- Main Content -->
     <main id="main" tabindex="-1">
-    <section class="container my-5" aria-labelledby="contact-heading">
-        <h2 id="contact-heading" class="visually-hidden">Contact information and form</h2>
-        <div class="row">
-            <div class="col-md-6">
-                <h3>Reach Out</h3>
-                <p><a href="mailto:info@gswarwagon.example">Email: info@gswarwagon.example</a></p>
-                <p><a href="tel:+16043884636">Phone: 604-388-4636</a></p>
+        <section class="contact-section">
+            <div class="container">
+                <div class="contact-content">
+                    <div class="contact-info">
+                        <h2>Get in Touch</h2>
+                        <div class="info-block">
+                            <h3>Phone</h3>
+                            <a href="tel:+16043884636">(604) 388-4636</a>
+                            <p>Available 24/7 for emergency services</p>
+                        </div>
+                        <div class="info-block">
+                            <h3>Email</h3>
+                            <a href="mailto:info@gswarwagon.example">info@gswarwagon.example</a>
+                            <p>We respond within 2 business hours</p>
+                        </div>
+                        <div class="info-block">
+                            <h3>Service Area</h3>
+                            <p>Sea to Sky Corridor<br>Greater Whistler Region<br>Squamish & Surrounding Areas</p>
+                        </div>
+                    </div>
+                    
+                    <div class="contact-form-wrapper">
+                        <h2>Send us a Message</h2>
+                        <form id="contact-form" method="POST" novalidate>
+                            <div class="form-group">
+                                <label for="name">Name</label>
+                                <input type="text" id="name" name="name" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" id="email" name="email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="phone">Phone</label>
+                                <input type="tel" id="phone" name="phone">
+                            </div>
+                            <div class="form-group">
+                                <label for="service">Service Interested In</label>
+                                <select id="service" name="service">
+                                    <option value="">Select a service...</option>
+                                    <option value="garbage">Garbage Removal</option>
+                                    <option value="labour">Labour Hire</option>
+                                    <option value="snow">Snow Management</option>
+                                    <option value="demolition">Demolition</option>
+                                    <option value="power-wash">Power Washing</option>
+                                    <option value="yard">Yard Cleanup</option>
+                                    <option value="other">Other</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Message</label>
+                                <textarea id="message" name="message" rows="6" required></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Send Message</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-6">
-                <h3>Send a Message</h3>
-                <form id="contact-form" action="#" method="POST" novalidate>
-                    <div class="mb-3">
-                        <label for="name" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" name="name" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" name="email" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="message" class="form-label">Message</label>
-                        <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                </form>
-            </div>
-        </div>
-    </section>
+        </section>
     </main>
 
-    <footer class="bg-white text-center py-3">
-        <p>&copy; <span id="year"></span> GS War Wagon Garbage & Refuse LTD. All rights reserved.</p>
+    <!-- Footer -->
+    <footer class="footer" role="contentinfo">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h4>GS War Wagon</h4>
+                    <p>Professional waste management and labor solutions for the Sea to Sky.</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Contact</h4>
+                    <p>
+                        <a href="tel:+16043884636">(604) 388-4636</a><br>
+                        <a href="mailto:info@gswarwagon.example">info@gswarwagon.example</a>
+                    </p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; <span id="year"></span> GS War Wagon Garbage & Refuse LTD. All rights reserved.</p>
+            </div>
+        </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/scripts.js"></script>
-    <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
     <script>
+        document.getElementById('year').textContent = new Date().getFullYear();
         (function(){
             var form = document.getElementById('contact-form');
             if(!form) return;
             form.addEventListener('submit', function(e){
                 e.preventDefault();
-                alert('Form submitted (demo). Replace action with Formspree or server endpoint.');
+                alert('Thank you! We will get back to you within 2 business hours.');
+                form.reset();
             });
         })();
     </script>
