Update contact info: email to gswarwagon@gmail.com, phone to (604) 938-4000

--- a/contact.html
+++ b/contact.html
@@ -21,11 +21,11 @@
                     </a>
                 </div>
                 <div class="nav-contact-desktop">
-                    <a href="tel:+16043884636" class="contact-link phone">
+                    <a href="tel:+16049384000" class="contact-link phone">
                         <span class="label">Call:</span> (604) 388-4636
                     </a>
-                    <a href="mailto:info@gswarwagon.example" class="contact-link email">
-                        <span class="label">Email:</span> info@gswarwagon.example
+                    <a href="mailto:gswarwagon@gmail.com" class="contact-link email">
+                        <span class="label">Email:</span> gswarwagon@gmail.com
                     </a>
                 </div>
             </div>
@@ -43,11 +43,11 @@
                     <li><a href="blog.html">Blog</a></li>
                 </ul>
                 <div class="nav-contact-mobile">
-                    <a href="tel:+16043884636" class="contact-link phone">
+                    <a href="tel:+16049384000" class="contact-link phone">
                         <span class="label">Call:</span> (604) 388-4636
                     </a>
-                    <a href="mailto:info@gswarwagon.example" class="contact-link email">
-                        <span class="label">Email:</span> info@gswarwagon.example
+                    <a href="mailto:gswarwagon@gmail.com" class="contact-link email">
+                        <span class="label">Email:</span> gswarwagon@gmail.com
                     </a>
                 </div>
             </div>
@@ -71,12 +71,12 @@
                         <h2>Get in Touch</h2>
                         <div class="info-block">
                             <h3>Phone</h3>
-                            <a href="tel:+16043884636">(604) 388-4636</a>
+                            <a href="tel:+16049384000">(604) 938-4000</a>
                             <p>Available 24/7 for emergency services</p>
                         </div>
                         <div class="info-block">
                             <h3>Email</h3>
-                            <a href="mailto:info@gswarwagon.example">info@gswarwagon.example</a>
+                            <a href="mailto:gswarwagon@gmail.com">gswarwagon@gmail.com</a>
                             <p>We respond within 2 business hours</p>
                         </div>
                         <div class="info-block">
@@ -145,8 +145,8 @@
                 <div class="footer-section">
                     <h4>Contact</h4>
                     <p>
-                        <a href="tel:+16043884636">(604) 388-4636</a><br>
-                        <a href="mailto:info@gswarwagon.example">info@gswarwagon.example</a>
+                        <a href="tel:+16049384000">(604) 938-4000</a><br>
+                        <a href="mailto:gswarwagon@gmail.com">gswarwagon@gmail.com</a>
                     </p>
                 </div>
             </div>
