--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                     </a>
                 </div>
                 <div class="nav-contact-desktop">
-                    <a href="tel:+16043884636" class="contact-link phone">
+                    <a href="tel:+16049384000" class="contact-link phone">
                         <span class="label">Call:</span> (604) 388-4636
                     </a>
-                    <a href="mailto:info@gswarwagon.example" class="contact-link email">
-                        <span class="label">Email:</span> info@gswarwagon.example
+                    <a href="mailto:gswarwagon@gmail.com" class="contact-link email">
+                        <span class="label">Email:</span> gswarwagon@gmail.com
                     </a>
                 </div>
             </div>
@@ -44,11 +44,11 @@
                     <li><a href="blog.html">Blog</a></li>
                 </ul>
                 <div class="nav-contact-mobile">
-                    <a href="tel:+16043884636" class="contact-link phone">
+                    <a href="tel:+16049384000" class="contact-link phone">
                         <span class="label">Call:</span> (604) 388-4636
                     </a>
-                    <a href="mailto:info@gswarwagon.example" class="contact-link email">
-                        <span class="label">Email:</span> info@gswarwagon.example
+                    <a href="mailto:gswarwagon@gmail.com" class="contact-link email">
+                        <span class="label">Email:</span> gswarwagon@gmail.com
                     </a>
                 </div>
             </div>
@@ -185,8 +185,8 @@
                 <div class="footer-section">
                     <h4>Contact</h4>
                     <p>
-                        <a href="tel:+16043884636">(604) 388-4636</a><br>
-                        <a href="mailto:info@gswarwagon.example">info@gswarwagon.example</a>
+                        <a href="tel:+16049384000">(604) 938-4000</a><br>
+                        <a href="mailto:gswarwagon@gmail.com">gswarwagon@gmail.com</a>
                     </p>
                 </div>
             </div>
