Update Demolition icon to hammer and pick

--- a/services.html
+++ b/services.html
@@ -91,7 +91,7 @@
                         <a href="contact.html" class="service-link">Request Service →</a>
                     </div>
                     <div class="service-card">
-                        <div class="service-icon">🏗️</div>
+                        <div class="service-icon">⚒️</div>
                         <h3>Demolition</h3>
                         <p>Professional demolition and removal services with full environmental compliance. Safe, efficient, and responsible waste management.</p>
                         <a href="contact.html" class="service-link">Request Service →</a>
