--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <a href="services.html" class="service-link">Learn more →</a>
                     </div>
                     <div class="service-card">
-                        <div class="service-icon">🏗️</div>
+                        <div class="service-icon">⚒️</div>
                         <h3>Demolition</h3>
                         <p>Professional demolition and removal services with full environmental compliance.</p>
                         <a href="services.html" class="service-link">Learn more →</a>
